# nanox

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  AUTHORS.md  Makefile.am  README.md  bootstrap  configure.ac  dist-package.sh  lx_find_mpi.m4  nanox-config.h.in
doc/: Coding_guidelines.txt  Makefile.am  coding_guidelines.md  developers_guide.md  doxy-nanox.in  git_guidelines.md  paraver_configs.mk
doc/guidelines/: api_guidelines.md  coding_guidelines.md  git_guidelines.md
doc/modules/: dependences.md  slicers.md
doc/paraver_configs/: 2dh_total_bandwidth.cfg  2dh_who_runs_what.cfg  2dp_runtime_calls.cfg  2dp_status.cfg  2dp_transfer_direction.cfg  3dh_duration_runtime_calls.cfg  3dh_duration_state.cfg  Makefile.am  api_bursts.cfg  api_time_distribution.cfg  bytes_in.cfg  bytes_out.cfg  cache_wait.cfg  nanox_runtime.cfg  sampled_line_functions.cfg  sched-constraint.cfg  stalled_cycles.cfg  submit_enumeration.cfg  task_number.cfg  thread_state.cfg  transfer_direction.cfg  wd_id.cfg
doc/paraver_configs/cluster/: network_transfers_and_bw.cfg
doc/paraver_configs/counters/: l1i_cache_misses.cfg  mispredicted_branches.cfg  process_element_l3_misses.cfg  stalled_cycles_ratio.cfg  tlb_i_misses.cfg
doc/paraver_configs/data/: 3dh_bw2device.cfg  bandwidth_per device.cfg  bytes_being_transfered.cfg  cache_waiting_for...cfg  direction_of_data_transfer.cfg  malloc_free_in_device.cfg
doc/paraver_configs/general/: 2d_dependences_connectivity.cfg  2dp_WhereMyNextTaskWasGenerated.cfg  3dh_duration_state.cfg  3dp_depsignaltocore_task.cfg  api_bursts.cfg  creating_submitting_task.cfg  idle_state_duration.cfg  per_core_execution_order.cfg  scheduling_task.cfg  spins_yields.cfg  task_and_deps.cfg  task_being_scheduled.cfg  task_being_signaled.cfg  task_id.cfg
doc/paraver_configs/gpu_cuda/: 2dh_duration_CUDA_kernel.cfg  2dp_CUDA_kernel.cfg  3dh_duration_call.cfg  CUDA_call.cfg  CUDA_runtime.cfg  CUDA_runtime_3dh_duration.cfg  CUDA_transfer_calls.cfg  CUDA_transfer_direction.cfg  gpu_arch_state.cfg  transfer_size.cfg
doc/paraver_configs/hwc/: active_set.cfg
doc/paraver_configs/mpi/: default.pcf
scripts/: Makefile.am  astyle-nanox.sh  bets  create_mic_nx_hostlist  extrae_post_process.sh  headerfy_with_docker.sh  nanox  nanox.spec  nanoxrun.sh  offload_instrumentation.sh  offload_slave_launch.sh  offload_slave_launch.sh.in  ompss_mpi_launch.sh  preamble.txt  task_numbers_in_path_to_selected_tasks.REF.cfg  tasks_in_path_to_selected.REF.cfg  track_deps.sh
scripts/cluster/: nanoxrun-minotauro.sh  nanoxrun-mn3.sh
scripts/debian/: control  rules
scripts/lit/: PKG-INFO
src/: Makefile.am  common.am  plugins-list.in
src/apis/: Makefile.am
src/arch/: Makefile.am
src/core/: Makefile.am  accelerator.cpp  accelerator.hpp  accelerator_decl.hpp  accelerator_fwd.hpp  address.hpp  address_decl.hpp  address_fwd.hpp  addressspace.cpp  addressspace.hpp  addressspace_decl.hpp  addressspace_fwd.hpp  asyncthread.cpp  asyncthread.hpp  asyncthread_decl.hpp  asyncthread_fwd.hpp  barrier.hpp  barrier_decl.hpp  barrier_fwd.hpp  basedependency_decl.hpp  basedependency_fwd.hpp  basethread.cpp  basethread.hpp  basethread_decl.hpp  basethread_fwd.hpp  bitcounter.hpp  cache_map.hpp  cache_map_decl.hpp  cachedaccelerator.hpp  cachedaccelerator_decl.hpp  cachedregionstatus.hpp  cachedregionstatus_decl.hpp  commutationdepobj.hpp  commutationdepobj_decl.hpp  commutationdepobj_fwd.hpp  copydata.cpp  copydata.hpp  copydata_decl.hpp  copydata_fwd.hpp  coresetup.cpp  (+174 more)
src/nbproject/: Package-Default.bash  configurations.xml  project.xml
src/plugins/: Makefile.am
src/pms/: Makefile.am
src/sched/: Makefile.am  bf_sched.cpp  centralized_barrier.cpp  cilk_sched.cpp  dissem_barrier.cpp  dummy_cutoff.cpp  posix_barrier.cpp  ready_cutoff.cpp  tasknum_cutoff.cpp  wf_sched.cpp  wf_sched.hpp
src/support/: Makefile.am  allocator.cpp  allocator.hpp  allocator_decl.hpp  allocator_fwd.hpp  archplugin.cpp  archplugin.hpp  archplugin_decl.hpp  atomic.hpp  atomic_decl.hpp  atomic_flag.hpp  bitcounter.hpp  bitcounter_decl.hpp  bitcounter_fwd.hpp  cache.cpp  cache.hpp  cache_decl.hpp  cache_fwd.hpp  compatibility.hpp  concurrent_queue.hpp  config.cpp  config.hpp  config_decl.hpp  config_fwd.hpp  containeradapter.hpp  containeradapter_decl.hpp  containeradapter_fwd.hpp  containertraits.hpp  copydescriptor.hpp  copydescriptor_decl.hpp  copydescriptor_fwd.hpp  dbmanager.cpp  dbmanager.hpp  dbmanager_sqlite3.cpp  dbmanager_sqlite3.hpp  dbmanager_sqlite3_empty.cpp  dbmanager_sqlite3_empty.hpp  debug.cpp  debug.hpp  depsregion.hpp  (+77 more)
src/utils/: Makefile.am  list_plugins.cpp  nanox.cpp  nanox_bindings.cpp  version_commons.am
test/: Makefile.am  api_slicer_for.c  api_slicer_for.cpp  fib.c  fib.cpp  fibnocutoff.c  slicer_for.cpp  slicer_for_dynamic_1.cpp  test1.cpp  test_barrier.cpp  test_copies_device.cpp  test_copy_in_out.c  test_copy_in_out.cpp  test_copy_in_out_c_aux.cpp  test_dependencies.c  test_dependency_types.c  test_instrumentor_01.c  test_instrumentor_02.c  test_instrumentor_03.c  test_op.cpp  test_single.cpp  test_slicer.cpp  test_teambarrier.cpp  work_descriptor_create.cpp  work_descriptor_create_1.cpp  work_descriptor_create_2.cpp
test/apps/: fib_c.c  fib_cpp.cpp  fibnocutoff.c
test/benchmkarks/: test_nanox_creation.cpp  test_nanox_creation_api.cpp
test/core/: test1.cpp  work_descriptor_create.cpp
test/gens/: Makefile.am  api-generator.in  config-generator.c  core-generator.in  mixed-generator.in  nanox-creation-generator.in
tests/: Makefile.am  lit.site.cfg
tests/benchmark/: common.h
tests/benchmarks/: test_nanox_creation.cpp  test_nanox_creation_api.cpp
tests/gens/: Makefile.am  api-generator.in  api-omp-generator.in  config-generator.cpp  config.py  core-generator.in  gpu-config-generator.cpp  gpu-generator.in  mcc-ompss-generator.in  mcc-openmp-generator.in  mixed-generator.in  mpi-offload-generator.in  nanos-exports.def  nanox-creation-generator.in  opencl-generator.in  resiliency-generator.in
tests/litsupport/: bets.py
tests/mcc/: header.txt  omp_ws_01.c  omp_ws_03.c
(+1246 files in other folders)
